docs: Update README with comprehensive guide and embed assets in self-contained JAR
- Document Unified Activity Report pipeline, statuses, and CSV schemas
- Document Web GUI Precision Dark Engineering dashboard and keyboard shortcuts
- Document embedded HTTP REST API endpoints and CLI option flags
- Update build scripts to package README.md, index.html, and analyzer.properties into javalens.jar
- Add classpath resource fallbacks in WebServer and Config for self-contained JAR execution